--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
     "sharp": "^0.27.2",
