--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "env-cmd ./config/dev.env nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,8 @@
     "multer": "^1.4.2",
     "sharp": "^0.27.2",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "env-cmd": "^8.0.2"
   }
 }
