--- a/config/dev.env
+++ b/config/dev.env
@@ -2,3 +2,4 @@ PORT=3000
 API_KEY=cd337966d6f3608639527637605bf849-29561299-91c91822
 SECRET=thesecretword
 MONGODB_URL=mongodb://127.0.0.1:27017/task-managerDB
+DOMAIN=sandboxd1ddb8fad74a4c4080f2f0861685f239.mailgun.org
